--- a/src/app/xkcdReader/XkcdReader.html
+++ b/src/app/xkcdReader/XkcdReader.html
@@ -1,6 +1,7 @@
 <div class="center-content">
     <div class="centered">
         <div id="comic-controls" class="centered">
+            <button ng-click="xrc.gotoFirstComic()">First</button>
             <button ng-click="xrc.prevComic()">Prev</button>
             <input type="number" autofocus ng-attr-min="{{xrc.MIN_COMIC_NUM}}" ng-attr-max="{{xrc.latestComicNum}}" ng-model="xrc.comicNum">
             <button ng-click="xrc.nextComic()">Next</button>
