--- a/src/app/xkcdReader/XkcdReader.html
+++ b/src/app/xkcdReader/XkcdReader.html
@@ -3,7 +3,12 @@
         <div id="comic-controls" class="centered">
             <button ng-click="xrc.gotoFirstComic()">First</button>
             <button ng-click="xrc.prevComic()">Prev</button>
-            <input type="number" autofocus ng-attr-min="{{xrc.MIN_COMIC_NUM}}" ng-attr-max="{{xrc.latestComicNum}}" ng-model="xrc.comicNum">
+            <input type="number"
+                   autofocus
+                   ng-model="xrc.comicNum"
+                   ng-attr-min="{{xrc.MIN_COMIC_NUM}}"
+                   ng-attr-max="{{xrc.latestComicNum}}"
+                   ng-attr-style="{{'width: ' + xrc.latestComicNum.toString().length + 'em;'}}">
             <button ng-click="xrc.nextComic()">Next</button>
             <button ng-click="xrc.gotoLatestComic()">Current</button>
         </div>
