--- a/src/app/xkcdReader/XkcdReader.html
+++ b/src/app/xkcdReader/XkcdReader.html
@@ -1,17 +1,13 @@
-<div class="center-content">
-    <div class="centered">
-        <div id="comic-controls" class="centered">
-            <button ng-click="xrc.gotoFirstComic()">First</button>
-            <button ng-click="xrc.prevComic()">Prev</button>
-            <input type="number"
-                   autofocus
-                   ng-model="xrc.comicNum"
-                   ng-attr-min="{{xrc.MIN_COMIC_NUM}}"
-                   ng-attr-max="{{xrc.latestComicNum}}"
-                   ng-attr-style="{{'width: ' + xrc.latestComicNum.toString().length + 'em;'}}">
-            <button ng-click="xrc.nextComic()">Next</button>
-            <button ng-click="xrc.gotoLatestComic()">Current</button>
-        </div>
-        <xkcd-comic comic-number="xrc.comicNum" ng-click="xrc.nextComic()" ng-keydown="xrc.handleComicKeypress($event)"></xkcd-comic>
-    </div>
+<div id="comic-controls" class="center-text">
+    <button ng-click="xrc.gotoFirstComic()">First</button>
+    <button ng-click="xrc.prevComic()">Prev</button>
+    <input type="number"
+           autofocus
+           ng-model="xrc.comicNum"
+           ng-attr-min="{{xrc.MIN_COMIC_NUM}}"
+           ng-attr-max="{{xrc.latestComicNum}}"
+           ng-attr-style="{{'width: ' + xrc.latestComicNum.toString().length + 'em;'}}">
+    <button ng-click="xrc.nextComic()">Next</button>
+    <button ng-click="xrc.gotoLatestComic()">Current</button>
 </div>
+<xkcd-comic comic-number="xrc.comicNum" ng-click="xrc.nextComic()" ng-keydown="xrc.handleComicKeypress($event)"></xkcd-comic>
