Added title and alt(tooltip) text from JSON data. closes #6

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -39,6 +39,10 @@ xkcd-reader {
     display: block;
 }
 
+h2 {
+    margin: 1%;
+}
+
 /* Pure CSS loader from https://github.com/lukehaas/css-loaders */
 .loader:before,
 .loader:after,
