Comic no longer advances when title is clicked.

--- a/src/app/xkcdReader/XkcdReader.html
+++ b/src/app/xkcdReader/XkcdReader.html
@@ -10,4 +10,4 @@
     <button ng-click="xrc.nextComic()">Next</button>
     <button ng-click="xrc.gotoLatestComic()">Current</button>
 </div>
-<xkcd-comic comic-number="xrc.comicNum" ng-click="xrc.nextComic()" ng-keydown="xrc.handleComicKeypress($event)"></xkcd-comic>
+<xkcd-comic comic-number="xrc.comicNum" comic-img-click="xrc.nextComic()" ng-keydown="xrc.handleComicKeypress($event)"></xkcd-comic>
