Fixed #13 - Comic switching animation now works as intended.

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -46,6 +46,11 @@ xkcd-reader, xkcd-comic {
     display: block;
 }
 
+xkcd-comic {
+    position: absolute;
+    width: 100%;
+}
+
 .ng-swap-forward.ng-enter {
     -webkit-animation-name: slideInRight;
     animation-name: slideInRight;
