Fixed keyboard navigation - Closes #7

--- a/src/app/xkcdReader/XkcdReader.html
+++ b/src/app/xkcdReader/XkcdReader.html
@@ -17,6 +17,5 @@
             ng-class="xrc.swapDirectionClass"
             ng-hide="xrc.invalidComicNum"
             comic-number="xrc.comicNum"
-            comic-img-click="xrc.nextComic()"
-            ng-keydown="xrc.handleComicKeypress($event)">
+            comic-img-click="xrc.nextComic()">
 </xkcd-comic>
